syntax = "proto3";
option go_package = "protobufMessages/";

package millionaires.Lifelines;

import "Answers.proto";

enum Lifeline {
    fiftyFifty = 0;
    friendCall = 1;
    audience = 2;
}

message UseLifelineRequest {
    string runSnowflakeId = 1;
    Lifeline lifeline = 2;
}

message UseLifelineResponse {
    oneof payload {
        FiftyFiftyResponse fiftyFifty = 1;
        AudienceResponse audience = 2;
    }
}

message FiftyFiftyResponse {
    repeated Answers.Answer answers = 2;
}

message AudienceResponseItem{
    string id = 1;
    int32 percentage = 2;

}

message AudienceResponse {
    repeated AudienceResponseItem answers = 1;
}
